--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Combina la eficiencia y rendimiento de lenguajes como C con la simplicidad <br>
         y productividad de lenguajes modernos</p>
         <p>La posición en el ranking de stack overflow es 11</p>
-        <img src="C:\Users\adcam\Downloads\go.png" width="200" height="100">
+        <img src="Imagenes\go.png" width="200" height="100">
 
             
     </div>
@@ -29,7 +29,7 @@
         <p>Java es un lenguaje de programación ampliamente utilizado para codificar <br>
         aplicaciones web</p>
         <p>La posición en el ranking de stack overflow es 8</p>
-        <img src="C:\Users\adcam\Downloads\pngwing.com (5).png" width="200" height="200">
+        <img src="Imagenes/java.png" width="200" height="200">
 
     </div>
     <div class="div3">
@@ -37,7 +37,7 @@
         <p>La intencion de su creación fue extender al lenguaje de proframación C y añadir<br>
         mecanismos que permiten la manipulación de objetos</p>
         <p>La posición en el ranking de stack overflow es 10</p>
-        <img src="C:\Users\adcam\Downloads\pngwing.com (1).png" width="150" height="150">
+        <img src="Imagenes/c++.png" width="150" height="150">
 
     </div>
     <div class="div3">
@@ -45,7 +45,7 @@
         <p>JavaScript es una de las tecnologias fundamentakes de WWW, junto con <br>
         HTML Y CCS</p>
         <p>La posición en el ranking de stack overflow es 1</p>
-        <img src="C:\Users\adcam\Downloads\pngwing.com (2).png" width="150" height="150">
+        <img src="Imagenes/js.png" width="150" height="150">
 
     </div>
     <div class="div2">
@@ -54,7 +54,7 @@
         desarrollar software en plataformas Apple: iOS, macOS,tvOS,watchOS, e incluso <br>
     visionOS</p>
         <p>La posición en el ranking de stack overflow es 16</p>
-        <img src="C:\Users\adcam\Downloads\pngwing.com (4).png" width="150" height="150">
+        <img src="Imagenes/swift.png" width="150" height="150">
 
     </div>
     <div class="div1">
@@ -62,7 +62,7 @@
         <p>Combina la eficiencia y rendimiento de lenguajes como C con la simplicidad <br>
         y productividad de lenguajes modernos</p>
         <p>La posición en el ranking de stack overflow es 11</p>
-        <img src="C:\Users\adcam\Downloads\pngwing.com (3).png" width="200" height="150">
+        <img src="Imagenes/ts.png" width="200" height="150">
 
     </div>
 </div>
