añadir imagen faltante

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div id="divArriba">
         <div>
-            <img class="img1"  src="C:\Users\adcam\Downloads\pngwing.com.png" width="130" height="100">
+            <img class="img1"  src="Imagenes/pajarito.png" width="130" height="100">
         </div>
         <div>
             <h1 style="text-align: center;">Principales Lenguajes de Programacion</h1>
